objects/qbdialer__DialerQueryItem__c.object
<CustomObject>
    <description>Items that match the Dialer Query&apos;s criteria</description>
    <fields>
        <fullName>qbdialer__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dialer Query Items</relationshipLabel>
        <relationshipName>Dialer_Query_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dialer Query Items</relationshipLabel>
        <relationshipName>Dialer_Query_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dialed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dialed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__DialerQueryId__c</fullName>
        <label>Dialer Query</label>
        <referenceTo>qbdialer__DialerQuery__c</referenceTo>
        <relationshipLabel>Dialer Query Items</relationshipLabel>
        <relationshipName>Dialer_Query_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>qbdialer__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Dialer Query Items</relationshipLabel>
        <relationshipName>Dialer_Query_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__OrderBy__c</fullName>
        <label>OrderBy</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__RelatedItemId__c</fullName>
        <description>For items created from Tasks, Events, Opportunities, or Cases</description>
        <label>RelatedItemId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Dialer Query Item</label>
    <listViews>
        <fullName>qbdialer__tempview</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>tempview</label>
    </listViews>
    <nameField>
        <label>Dialer Query Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dialer Query Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>